feat: add support to path-addressed storage reads
